1/ maven test phase related settings refactored 2/ maven wrapper version bump up